@@ -32,7 +32,7 @@ import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 
 /**
- * @author Geoffroy Jamgotchian <geoffroy.jamgotchian at rte-france.com>
+ * @author Geoffroy Jamgotchian {@literal <geoffroy.jamgotchian at rte-france.com>}
  */
 @AutoService(Importer.class)
 public class PowerFactoryImporter implements Importer {
@@ -120,7 +120,7 @@ public class PowerFactoryImporter implements Importer {
         if (elmNets.isEmpty()) {
             throw new PowerFactoryException("No ElmNet object found");
         }
-        LOGGER.info("Study case has {} network(s): {}", elmNets.size(), elmNets.stream().map(DataObject::getLocName).collect(Collectors.toList()));
+        LOGGER.info("Study case has {} network(s): {}", elmNets.size(), elmNets.stream().map(DataObject::getLocName).toList());
 
         // case date
         DateTime caseDate = new Instant(studyCase.getTime().toEpochMilli()).toDateTime();
@@ -185,7 +185,7 @@ public class PowerFactoryImporter implements Importer {
         Network network, List<DataObject> slackObjects) {
         var objs = studyCase.getElmNets().stream()
             .flatMap(elmNet -> elmNet.search(".*").stream())
-            .collect(Collectors.toList());
+            .toList();
         for (DataObject obj : objs) {
             switch (obj.getDataClassName()) {
                 case "ElmCoup":
